--- a/Exercicìos/md4/ex025/form1.html
+++ b/Exercicìos/md4/ex025/form1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Primeiro Formulário</h1>
-   <form action="cadastro.js" autocomplete="off">
+   <form action="cadastro.js" method="post" autocomplete="off">
      <p>
         <label for="Nome">Nome:</label> 
         <input type="text" name="Nome" id="Nome">
