HTML-CSS_estudo v4.2
Estudo de formulário aprendendo utilizar Color, Range e File.

--- a/Exercicìos/md4/ex025/form5.html
+++ b/Exercicìos/md4/ex025/form5.html
@@ -44,5 +44,11 @@
             </p>
         </form>
     </fieldset>
+    <form action="cadastro.js" method="post">
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
+    </form>
 </body>
 </html>
