--- a/Exercicìos/md4/ex026/m005/index.htm
+++ b/Exercicìos/md4/ex026/m005/index.htm
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style/style.css">
     <title>Media Query</title>
 </head>
 <body>
     <header>
-        <h1></h1>
-        <menu>
+        <h1>Site top</h1>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Comprar</a></li>
@@ -26,5 +28,15 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, accusantium eaque voluptas asperiores ut libero nostrum id ea, quae, suscipit voluptatum voluptatem necessitatibus ex obcaecati voluptatibus dignissimos error officia? Nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eos officiis rerum totam, magnam magni distinctio. Velit sint, aspernatur quae perferendis, eius sapiente et nostrum, voluptatem sunt eum labore omnis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos perspiciatis ipsa ea rem! Minima exercitationem nulla qui quae laboriosam voluptas quo ab, doloremque provident error necessitatibus voluptatum, deleniti tempora porro!</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else {
+               itens.style.display = 'block'
+            }
+
+        }
+    </script>
 </body>
 </html>
